# operation-warbot

./: .env.example  Cargo.toml  Dockerfile  channels.json  config.toml
.github/workflows/: docker-image.yml
src/: config.rs  main.rs
src/bot/: auth.rs  mod.rs  websocket.rs
src/routes/: mod.rs  webhook.rs
src/routes/tiltify/: mod.rs  webhook.rs
