[package]
name = "tiltify-twitchbot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
thiserror = { version = "2.0.12", features = [] }
axum = { version = "0.8.4", features = ["http2", "json", "tracing", "tokio", "matched-path", "default"] }
axum-extra = { version = "0.10.1", features = ["json-deserializer", "json-lines"] }
clap = { version = "4.5.37", features = ["derive", "env"] }
crossbeam = { version = "0.8.4", features = [] }
eyre = "0.6.12"
dotenvy = { version = "0.15.7", features = ["clap"] }
serde = { version = "1.0.219", features = ["derive", "alloc"] }
serde_json = { version = "1.0.140", features = [] }
tungstenite = "0.26.2"
tokio = { version = "1.44.2", default-features = false, features = ["rt", "rt-multi-thread", "macros", "signal"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls", "url"] }
twitch_api = { version = "0.7.2", features = ["eventsub", "helix", "reqwest", "twitch_oauth2", "serde_json", "trace_unknown_fields", "tracing", ] }
twitch_oauth2 = { version = "0.15.2", features = ["client"] }
toml = "0.8.22"
serde_derive = "1.0.219"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "serde"] }
url = "2.5.4"
http-body-util = "0.1.3"
reqwest = "0.12.15"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "serde_json"] }
sentry = { version = "0.38.1", features = ["tracing"] }